# practice

./: .gitignore  pyproject.toml
ar/: camera.py  main.py  points.py  test.py
ar/common/: texture.py
cg/: tutorial01.py  tutorial02.py  tutorial03.py  tutorial04.py  tutorial05.py  tutorial06.py  tutorial07.py  tutorial08.py
cg/common/: __init__.py  controls.py  object.py  shader.py
ip/: 10_binarize.py  11_connected.py  12_calibration.py  13_reproject.py  14_axis.py  1_imshow.py  2_videocapture.py  3_videoframes.py  4_colorchannel.py  5_rotation.py  6_grey.py  7_edge.py  8_noise.py  9_blur.py  capture.py  chess.py
resource/: calibration.json
resource/shaders/: point.frag  point.vert  standard.frag
